fix(tl-scrollbar): apply hover style only on scrollbar thumb

--- a/packages/core/src/mixins/_tl-scrollbar.scss
+++ b/packages/core/src/mixins/_tl-scrollbar.scss
@@ -20,10 +20,8 @@
     border-style: solid;
     border-color: transparent;
     background-clip: padding-box;
-  }
 
-  &:hover {
-    &::-webkit-scrollbar-thumb {
+    &:hover {
       border-width: var(--tl-scrollbar-thumb-border-hover-width);
     }
   }
